# photobooth

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  wrangler.jsonc
backend/: database.sql  package.json  tsconfig.tsbuildinfo  wrangler.jsonc
backend/sql/: command.sql
backend/src/: index.ts
cam/: .gitignore  Cargo.toml  run.sh  videotest.sh
cam/src/: feed.rs  main.rs  uploader_processer.rs  utils.rs  ws.rs
frontend/: pnpm-lock.yaml
web/: .env.prod  .gitignore  index.html  loading.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.ts  wrangler.jsonc
web/public/assets/: .jsonc
web/sql/: reset.sql  schema.sql
web/src/: Container.tsx  Provider.tsx  Router.tsx  main.tsx  routes.ts
web/src/backend/: admin_feed.ts  hash_api_key.ts  home_feed.ts  index.ts  pusher.ts  ssr.tsx  venue_auth.ts  ws_do.ts
web/src/components/Resizable/: index.tsx
web/src/config/: index.ts  server.json
web/src/constants/: app-options.ts  contants.ts  design-editor.ts  editor.ts
web/src/contexts/: DesignEditor.tsx  ToastContext.tsx
web/src/interfaces/: DesignEditor.ts
web/src/providers/: ToastProvider.tsx
web/src/services/: api.ts
web/src/styles/: styles.css
web/src/utils/: fonts.ts  load-and-save.ts
web/src/utils/load-and-save/: index.ts  state.tsx
web/src/views/: Faq.tsx  Loading.tsx  Session.tsx
web/src/views/Admin/: Admin.tsx  NewVenue.tsx  Sessions.tsx  Tiers.tsx  Venues.tsx  index.ts
(+67 files in other folders)
