[package]
name = "photobooth-cam"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.34.3"
egui = "0.34.3"
egui_alignments = "0.3.8"
env_logger = "0.11.10"
gstreamer = "0.25.2"
gstreamer-app = "0.25.2"
gstreamer-video = "0.25.2"
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
tokio = { version = "1", features = ["rt", "process", "rt-multi-thread"] }
futures-util = "0.3.32"
ort = "=2.0.0-rc.12"
serde_json = "1.0.150"
serde = "1.0.228"
reqwest = { version = "0.13.4", default-features = false, features = [
    "http2",
    "rustls",
    "charset",
    "json",
    "multipart",
    "form",
] }
anyhow = "1.0.103"
rustix = { version = "1.1.4", features = ["time", "io_uring"] }
image = { version = "0.25.10", default-features = false, features = [
    "webp",
    "jpeg",
    "rayon",
] }
ndarray = "0.17.2"
